update url site

--- a/_site.yml
+++ b/_site.yml
@@ -8,7 +8,7 @@ base_url: https://jixing.org
 google_analytics: "UA-77195073-2"
 favicon: images/avatar.png
 twitter: 
-  site: "@statsgen"
+  site: "@studentZero475"
 repository_url: https://github.com/jixing475/jixing.github.io
 creative_commons: CC BY
 collections:
